# HSCCU

./: .gitignore  AccidentalChange.h  AdjustmentPowers.h  AgilitySkills.h  AttackPowers.h  AutomatonPowers.h  BackgroundSkills.h  BodyAffectingPowers.h  CMakeLists.txt  CombatSkills.h  CustomSkill.h  Debug.h  DefensePowers.h  Dependence.h  Dependent.h  DistinctiveFeature.h  Enraged.h  Equipment.cpp  Equipment.h  FrameworkPowers.h  HSCCU.pro  HSCCU.pro.user.example  HeroSystem.pdn  Hunted.h  IntellectSkills.h  InteractionSkills.h  MentalPowers.h  MiscSkill.h  Money.h  MovementPowers.h  NegativeReputation.h  Perk.h  PhysicalComplication.h  PowerMenuDialog.cpp  PowerMenuDialog.h  PowerMenuDialog.ui  PsychologicalComplication.h  README.md  Rivalry.h  SegoeUI.ttc  (+85 more)
HSCCU/: HSCCU.html  HSCCU.js
Installer/config/: config.xml
install/config/: config.xml
